<?xml version="1.0"?>
<package format="2">
  <name>chameleon_nav</name>
  <version>0.0.1</version>
  <description>Make the chameleon (turtlebot3 burger) move in a straight line</description>
  <maintainer email="yumingjin2021@u.northwestern.edu">Yuming Jin</maintainer>
  <license>ALv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>

</package>
